# lora-basics-modem-zephyr

./: CHANGELOG  CMakeLists.txt  Kconfig  README.md
drivers/: CMakeLists.txt  Kconfig  lbm_p2p.h  ral_driver.c  ral_driver.h  ral_driver_context.h  ral_driver_legacy.c  ral_driver_legacy.h
drivers/sx126x/: CMakeLists.txt  Kconfig  sx126x_board.c  sx126x_context.h  sx126x_driver.c  sx126x_driver_legacy.c  sx126x_hal.c  sx126x_ral_bsp.c
samples/legacy_p2p_sender/: CMakeLists.txt  prj.conf  west.yml
samples/legacy_p2p_sender/src/: main.c
